syntax = "proto3";

message CategoryResponse {
  string id = 1;
  string name = 2;
  optional string description = 3;
}

message V1GetCategoriesHttpRequest {
  repeated string fields = 1;
  optional int32 offset = 2;
  optional int32 limit = 3;
}

message V1GetCategoriesHttpResponse {
  repeated CategoryResponse categories = 1;
}
